Add convergent extraction, multimodal support, and verification pipeline
* Extraction: Implement ConvergentDatasetModelExtractor for early stopping based on parameter stability. Add ModeDetector and CompositeModelFitter for multimodal distribution support.
* Commands: Add `generate sketch` for creating reference datasets, `generate from-model` for synthetic data generation, and `--verify` flag to `analyze profile` for round-trip validation.
* Analysis: Enhance `analyze profile` with empirical overrides, multimodal detection, and comprehensive convergence reporting.
* Infrastructure: Add strict Panama Vector API validation to ensure SIMD acceleration is active when available.
* Documentation: Add complete user manual for verification workflow, result interpretation, and troubleshooting.
* Testing: Add extensive accuracy tests for closed-loop verification, sampler consistency, and multimodal fitting.